Latest before lunch

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -338,7 +338,7 @@ a {
     }
   }
 }
-.mdc-card.vacancy-saved {
+.mdc-card.vacancy-shortlisted {
   .mdc-card__actions {
     .mdc-card__action--shortlist .fa-star {
       font-weight: 900;
@@ -483,7 +483,7 @@ body {
     display: flex;
     width: 100%;
     flex-direction: column;
-    padding: $unit/4 $unit/2;
+    padding: $unit/4 $unit/2 $unit/2;
     // padding: $unit/2;
     .mdc-layout-grid {
       padding: 0;
@@ -630,6 +630,12 @@ body {
 
 .fa-ul {
   margin: 0 0 0 $unit*2;
+  li {
+    margin-bottom: $unit/2;
+  }
+  li:last-child {
+    margin-bottom: 0;
+  }
 }
 
 footer {
