--- a/db/configurations/goodmoves/partials/vacancy/key-info.hbs
+++ b/db/configurations/goodmoves/partials/vacancy/key-info.hbs
@@ -4,9 +4,12 @@
     <div class="mdc-card__info--vacancy-title mdc-typography--headline">
       <a href="/vacancy/{{slug}}">{{title}}</a>
     </div>
-    <div class="mdc-card__info--vacancy-organisation mdc-typography--body1">
-      <a href="/organisation/{{organisation.slug}}">{{organisation.name}}</a>
-    </div>
+    <ul class="fa-ul">
+      <li class="mdc-card__info--vacancy-organisation mdc-typography--body1">
+        <span class="fa-li"><span class="far fa-building fa-fw" title="Organisation"></span></span>
+        <a href="/organisation/{{organisation.slug}}">{{organisation.name}}</a>
+      </li>
+    </ul>
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
@@ -29,7 +32,7 @@
           <ul class="fa-ul">
             {{#if status ~}}
             <li class="mdc-card__info--vacancy-status mdc-typography--body1">
-              <span class="fa-li"><span class="far fa-building fa-fw" title="Status"></span></span>
+              <span class="fa-li"><span class="far fa-clock fa-fw" title="Status"></span></span>
               {{status}}
             </li>
             {{/if ~}}
