--- a/db/configurations/goodmoves/partials/vacancy/full.hbs
+++ b/db/configurations/goodmoves/partials/vacancy/full.hbs
@@ -3,19 +3,19 @@
   <hr class="mdc-list-divider" />
   <div id="vacancy-tab-bar" class="mdc-tab-bar" data-mdc-auto-init="MDCTabBar" role="tablist">
     <a class="mdc-tab mdc-tab--active" role="tab" aria-controls="information" href="/vacancy/{{slug}}#information">
-      <span class="far fa-list-ul fa-fw" title="Information"></span>
+      <span class="far fa-list-ul fa-fw" aria-hidden="true"></span>
       Information
     </a>
     <a class="mdc-tab" role="tab" aria-controls="location" href="/vacancy/{{slug}}#location">
-      <span class="far fa-map-marker-alt fa-fw" title="Location"></span>
+      <span class="far fa-map-marker-alt fa-fw" aria-hidden="true"></span>
       Location
     </a>
     <a class="mdc-tab" role="tab" aria-controls="documents" href="/vacancy/{{slug}}#documents">
-      <span class="far fa-file-alt fa-fw" title="Documents"></span>
+      <span class="far fa-file-alt fa-fw" aria-hidden="true"></span>
       Documents
     </a>
     <a class="mdc-tab" role="tab" aria-controls="apply" href="/vacancy/{{slug}}#apply">
-      <span class="far fa-handshake fa-fw" title="Apply"></span>
+      <span class="far fa-handshake fa-fw" aria-hidden="true"></span>
       Apply
     </a>
     <span class="mdc-tab-bar__indicator"></span>
