--- a/db/configurations/goodmoves/templates/jobs/job.hbs
+++ b/db/configurations/goodmoves/templates/jobs/job.hbs
@@ -1,4 +1,4 @@
-<div class="goodmoves-job-search">
+<div class="goodmoves-job">
   <div class="container-fluid page-content">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner">
