--- a/db/configurations/goodmoves/layouts/default.hbs
+++ b/db/configurations/goodmoves/layouts/default.hbs
@@ -141,6 +141,9 @@ if(location.host.indexOf('.local') > -1){
                   <div class="mdc-menu__items mdc-list" role="menu" aria-hidden="true">
                     {{#each context.menus.main-extra ~}}
                     <a class="mdc-list-item{{#if (regexMatch ../request.url.pathname route "gi")}} mdc-list-item--activated{{/if}}" href="{{stripTrailingSlash path}}">
+                      {{#if icon ~}}
+                      <span class="far fa-{{icon}} mdc-list-item__graphic" aria-hidden="true"></span>
+                      {{/if ~}}
                       {{{label}}}
                     </a>
                     {{/each ~}}
@@ -158,6 +161,9 @@ if(location.host.indexOf('.local') > -1){
                   <div class="mdc-menu__items mdc-list" role="menu" aria-hidden="true">
                     {{#each context.menus.authenticated ~}}
                     <a class="mdc-list-item {{#if (regexMatch ../request.url.pathname route "gi")}} mdc-list-item--activated{{/if}}" href="{{stripTrailingSlash path}}" role="menuitem">
+                      {{#if icon ~}}
+                      <span class="far fa-{{icon}} mdc-list-item__graphic" aria-hidden="true"></span>
+                      {{/if ~}}
                       {{{label}}}
                     </a>
                     {{/each ~}}
@@ -209,18 +215,27 @@ if(location.host.indexOf('.local') > -1){
           <nav class="mdc-drawer__content mdc-list">
             {{#each context.menus.main ~}}
             <a class="mdc-list-item {{#if (regexMatch ../request.url.pathname route "gi")}} mdc-list-item--activated{{/if}}" href="{{stripTrailingSlash path}}">
+              {{#if icon ~}}
+              <span class="far fa-{{icon}} mdc-list-item__graphic" aria-hidden="true"></span>
+              {{/if ~}}
               {{{label}}}
             </a>
             {{/each ~}}
             <div role="separator" class="mdc-list-divider"></div>
             {{#each (reverse context.menus.main-extra) ~}}
             <a class="mdc-list-item {{#if (regexMatch ../request.url.pathname route "gi")}} mdc-list-item--activated{{/if}}" href="{{stripTrailingSlash path}}">
+              {{#if icon ~}}
+              <span class="far fa-{{icon}} mdc-list-item__graphic" aria-hidden="true"></span>
+              {{/if ~}}
               {{{label}}}
             </a>
             {{/each ~}}
             <div role="separator" class="mdc-list-divider"></div>
             {{#each (reverse context.menus.unauthenticated) ~}}
             <a class="mdc-list-item {{#if (regexMatch ../request.url.pathname route "gi")}} mdc-list-item--activated{{/if}}" href="{{stripTrailingSlash path}}">
+              {{#if icon ~}}
+              <span class="far fa-{{icon}} mdc-list-item__graphic" aria-hidden="true"></span>
+              {{/if ~}}
               {{{label}}}
             </a>
             {{/each ~}}
