--- a/db/configurations/goodmoves/partials/login.hbs
+++ b/db/configurations/goodmoves/partials/login.hbs
@@ -42,7 +42,7 @@
       var email = $('#login-email').val();
       var password = $('#login-password').val();
       evt.preventDefault();
-      app.auth().signInWithEmailAndPassword(email, password).then(function(user) {
+      goodmoves.app.auth().signInWithEmailAndPassword(email, password).then(function(user) {
         if (user) {
           console.log('Login form, user logged in', user);
         } else {
