--- a/db/configurations/goodmoves/partials/vacancy/search-result.hbs
+++ b/db/configurations/goodmoves/partials/vacancy/search-result.hbs
@@ -13,7 +13,7 @@
       <a href="/vacancy/{{slug}}/apply" class="mdc-card__action">Apply</a>
     </div>
     <div class="mdc-card__action-icons pull-right">
-      <button type="button" onclick="toggleShortlistItem('{{Id}}');" class="mdc-card__action mdc-card__action--shortlist" title="Add to shortlist">
+      <button type="button" onclick="goodmoves.toggleShortlistItem('{{Id}}');" class="mdc-card__action mdc-card__action--shortlist" title="Add to shortlist">
         <span class="fa-stack fa-lg">
           <span class="fas fa-circle fa-stack-2x" aria-hidden="true"></span>
           <span class="far fa-star fa-stack-1x" aria-hidden="true"></span>
