--- a/db/configurations/goodmoves/templates/jobs/search.hbs
+++ b/db/configurations/goodmoves/templates/jobs/search.hbs
@@ -5,7 +5,7 @@
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar page-sidebar">
           {{> search_form}}
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content page-content v-margin">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content page-content">
           {{> search_info paging=data.primaryResponse.pagination}}
 
           {{#each data.primaryResponse.hits.hits ~}}
