--- a/db/configurations/goodmoves/partials/vacancy/key-info.hbs
+++ b/db/configurations/goodmoves/partials/vacancy/key-info.hbs
@@ -25,7 +25,7 @@
             {{/if ~}}
             {{#if salary ~}}
             <li class="mdc-card__info--vacancy-salary mdc-typography--body1">
-              <span class="fa-li"><span class="far fa-money-bill fa-fw" title="Salary"></span></span>
+              <span class="fa-li"><span class="far fa-calculator fa-fw" title="Salary"></span></span>
               {{{salary}}}
             </li>
             {{/if ~}}
