--- a/db/configurations/goodmoves/partials/vacancy/map.hbs
+++ b/db/configurations/goodmoves/partials/vacancy/map.hbs
@@ -14,7 +14,7 @@
     {{/if}}
     {{#if salary}}
     <div class="post-info-item post-info-salary">
-      <span class="far fa-money-bill fa-fw" title="Salary"></span>
+      <span class="far fa-calculator fa-fw" title="Salary"></span>
       {{{salary}}}
     </div>
     {{/if}}
