--- a/db/configurations/goodmoves/layouts/default.hbs
+++ b/db/configurations/goodmoves/layouts/default.hbs
@@ -319,20 +319,17 @@ if(location.host.indexOf('.local') > -1){
   {{else}}
   <script type="text/javascript" src="https://unpkg.com/material-components-web@0.34.1/dist/material-components-web.min.js"></script>
   {{/if}}
-  <script type="text/javascript" id="cookieinfo"
-  src="https://storage.googleapis.com/scvo-assets/assets/js/cookieinfo.min.js"
-  data-bg="#251032"
-  data-fg="#FFFFFF"
-  data-link="#FFFFFF"
-  data-divlink="#FFFFFF"
-  data-divlinkbg="#B3185B"
-  data-moreinfo="/privacy-cookies-policy"
-  data-cookie="CookieInfoScript"
-  data-text-align="left">
-  </script>
   <script src="https://cdn.jsdelivr.net/npm/promise-polyfill@7/dist/polyfill.min.js"></script>
-  <script src="/assets/js/class-inheritance.js" async defer></script>
-  <script src="/assets/js/goodmoves/site-controller.js" async defer></script>
+  <script type="text/javascript" id="cookieinfo" src="/assets/js/goodmoves/main.js"
+    data-bg="#251032"
+    data-fg="#FFFFFF"
+    data-link="#FFFFFF"
+    data-divlink="#FFFFFF"
+    data-divlinkbg="#B3185B"
+    data-moreinfo="/privacy-cookies-policy"
+    data-cookie="CookieInfoScript"
+    data-text-align="left">
+  </script>
   <!--{section:foot}-->
 </body>
 </html>
