--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -224,6 +224,17 @@ a {
   color: white;
 }
 
+.mdc-button--raised {
+  background-size: 100% 1400%;
+  background-position: 0 0;
+  background-image: linear-gradient(60deg, $mdc-theme-primary-dark 50%, $mdc-theme-primary 50.08%);
+  transition: all 1s cubic-bezier(0, 1, 0.3, 1);
+}
+.mdc-button--raised:hover {
+  background-position: 0 100%;
+  transition: all .3s ease-out;
+}
+
 .search-info {
   margin-bottom: $unit;
   background: #fafafa;
@@ -348,6 +359,7 @@ a {
     }
     .mdc-card__action--shortlist:hover .fa-star {
       font-weight: 900;
+      color: $mdc-theme-primary-dark;
     }
   }
 }
@@ -358,6 +370,7 @@ a {
     }
     .mdc-card__action--shortlist:hover .fa-star {
       font-weight: 400;
+      color: $mdc-theme-primary-dark;
     }
   }
 }
@@ -615,7 +628,7 @@ body {
   }
   li:hover,
   li.current-page:hover {
-    background-color: $mdc-theme-primary;
+    background-color: $mdc-theme-primary-dark;
     a {
       color: white;
       text-decoration: none;
