--- a/db/configurations/goodmoves/templates/pages/home.hbs
+++ b/db/configurations/goodmoves/templates/pages/home.hbs
@@ -37,7 +37,7 @@
         <div class="mdc-select" data-mdc-auto-init="MDCSelect">
           <select class="mdc-select__native-control fullwidth" id="distance">
             <option value="any">Any distance</option>
-            <option value="1609.344">1 miles</option>
+            <option value="1609.344">1 mile</option>
             <option value="3218.688">2 miles</option>
             <option value="8046.72" selected>5 miles</option>
             <option value="16093.44">10 miles</option>
@@ -45,6 +45,7 @@
             <option value="40233.6">25 miles</option>
             <option value="80467.2">50 miles</option>
           </select>
+          <label class="mdc-floating-label mdc-floating-label--float-above" for="distance">Distance</label>
         </div>
       </div>
       <!-- <button type="button" id="detailed-results" class="mdc-button mdc-button--raised">Detailed results</button> -->
