--- a/db/configurations/goodmoves/partials/vacancy/key-info.hbs
+++ b/db/configurations/goodmoves/partials/vacancy/key-info.hbs
@@ -1,4 +1,4 @@
-{{> vacancy_status}}
+{{{rendered.vacancy_status}}}
 <div class="mdc-card__info--vacancy-row">
   <div class="mdc-card__info--vacancy">
     <div class="mdc-card__info--vacancy-title mdc-typography--headline">
@@ -33,10 +33,10 @@
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
           <ul class="fa-ul">
-            {{#if status_list ~}}
+            {{#if role_status_list ~}}
             <li class="mdc-card__info--vacancy-status mdc-typography--body1">
               <span class="fa-li"><span class="far fa-clock fa-fw" title="Status"></span></span>
-              {{status_list}}
+              {{role_status_list}}
             </li>
             {{/if ~}}
             {{#if closing_date ~}}
