--- a/db/configurations/goodmoves/partials/vacancy/key-info.hbs
+++ b/db/configurations/goodmoves/partials/vacancy/key-info.hbs
@@ -42,7 +42,7 @@
             {{#if closing_date ~}}
             <li class="mdc-card__info--vacancy-closing mdc-typography--body1">
               <span class="fa-li"><span class="far fa-calendar-alt fa-fw" title="Closing date"></span></span>
-              Closing {{momentFormat (moment closing_date "x") "Do MMMM YYYY"}}
+              Closing {{{momentFormat (moment closing_date "x") "D\<\s\u\p\>o\<\/\s\u\p\> MMMM YYYY"}}}
             </li>
             {{/if ~}}
           </ul>
