--- a/db/configurations/goodmoves/templates/pages/home.hbs
+++ b/db/configurations/goodmoves/templates/pages/home.hbs
@@ -50,8 +50,11 @@
       <!-- <button type="button" id="detailed-results" class="mdc-button mdc-button--raised">Detailed results</button> -->
     </section>
   </div>
+  <div id="search-results">
+    test
+  </div>
 </div>
-<section class="search-results">
+<section>
   <div id="map-full"></div>
 </section>
 {{> currently_recruiting}}
