--- a/db/configurations/goodmoves/partials/search-form.hbs
+++ b/db/configurations/goodmoves/partials/search-form.hbs
@@ -1,56 +1,77 @@
-<h2 class="mdc-card__title mdc-card__title--large">Search jobs</h2>
-<form action="/search" method="GET" [searchroute]="'search'" data-auto-search="true">
-  <div class="mdc-textfield mdc-textfield--upgraded">
-    <label class="mdc-textfield__label" for="q">Keywords</label>
-    <input type="text" class="mdc-textfield__input" name="q" id="jobs-keywords" placeholder="Keywords" value="{{request.params.query.q}}">
-  </div>
+{{#*inline "term_checkbox"}}
   <div class="mdc-form-field">
-    <label class="mdc-textfield__label" for="role">Role</label>
-    <select class="mdc-select" role="listbox" id="jobs-role" name="role">
-      <option value="" {{#if request.params.query.role}}{{else}}selected{{/if}}>Any role</option>
-      {{#each data.supplimentaryResponses.types.aggregations.roles.buckets ~}}
-      <option value="{{key}}" {{#compare ../request.params.query.role "===" key}}selected{{/compare}}>{{key}}</option>
-      {{/each ~}}
-    </select>
+    <div class="mdc-checkbox">
+      <input type="checkbox" class="mdc-checkbox__native-control" id="<!--{instance}-->_{{field}}_{{key}}" 
+        name="{{field}}[]" value="{{key}}" {{#if (contains selected key)}}checked{{/if}} />
+      <div class="mdc-checkbox__background">
+        <svg class="mdc-checkbox__checkmark"
+             viewBox="0 0 24 24">
+          <path class="mdc-checkbox__checkmark-path"
+                fill="none"
+                stroke="white"
+                d="M1.73,12.91 8.1,19.28 22.79,4.59"/>
+        </svg>
+        <div class="mdc-checkbox__mixedmark"></div>
+      </div>
+    </div>
+    <label for="<!--{instance}-->_{{field}}_{{key}}">{{key}}</label>
   </div>
-  <div class="mdc-form-field">
-    <label class="mdc-textfield__label" for="sector">Sector</label>
-    <select class="mdc-select" role="listbox" id="jobs-sector" name="sector">
-      <option value="" {{#if request.params.query.sector}}{{else}}selected{{/if}}>Any sector</option>
-      {{#each data.supplimentaryResponses.types.aggregations.sectors.buckets ~}}
-      {{#if key ~}}
-      <option value="{{key}}" {{#compare ../request.params.query.sector "===" key}}selected{{/compare}}>{{key}}</option>
-      {{/if ~}}
-      {{/each ~}}
-    </select>
+{{/inline}}
+
+<header class="mdc-drawer__header hide-md hide-lg">
+  <div class="mdc-drawer__header-content mdc-theme--primary-bg">
+    <h2>Search jobs</h2>
   </div>
-  <div class="mdc-form-field">
-    <label class="mdc-textfield__label" for="jobs-region">Region</label>
-    <select class="mdc-select" role="listbox" id="region" name="region">
-      <option value="" {{#if request.params.query.region}}{{else}}selected{{/if}}>Any region</option>
-      {{#each data.supplimentaryResponses.types.aggregations.regions.buckets ~}}
-      {{#if key ~}}
-      <option value="{{key}}" {{#compare ../request.params.query.region "===" key}}selected{{/compare}}>{{key}}</option>
-      {{/if ~}}
-      {{/each ~}}
-    </select>
-  </div>
-  <div class="mdc-form-field">
-    <label class="mdc-textfield__label" for="status">Status</label>
-    <select class="mdc-select" role="listbox" id="jobs-status" name="status">
-      <option value="" {{#if request.params.query.status}}{{else}}selected{{/if}}>Any status</option>
-      {{#each data.supplimentaryResponses.types.aggregations.statuses.buckets ~}}
-      {{#if key ~}}
-      <option value="{{key}}" {{#compare ../request.params.query.status "===" key}}selected{{/compare}}>{{key}}</option>
-      {{/if ~}}
-      {{/each ~}}
-    </select>
-  </div>
-  <div class="mdc-textfield mdc-textfield--upgraded">
-    <label class="mdc-textfield__label" for="minimum_salary">Minimum salary</label>
-    <input type="text" class="mdc-textfield__input" name="minimum_salary" id="jobs-minimum_salary" placeholder="e.g. 32000" value="{{request.params.query.minimum_salary}}">
-  </div>
-  <button class="mdc-button mdc-button--raised" type="submit">
-    Search jobs
-  </button>
-</form>
+</header>
+<div class="mdc-drawer__content">
+  <h2 class="mdc-drawer__content-heading mdc-theme--primary-bg mdc-theme--on-primary hide-sm">Search jobs</h2> 
+  <form action="/search" method="GET">
+    <div class="mdc-drawer__content-padded">
+      <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
+        <input type="text" id="<!--{instance}-->-keywords" name="keywords" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{request.params.query.q}}">
+        <label class="mdc-floating-label mdc-floating-label--float-above" for="keywords">Keywords</label>
+        <div class="mdc-notched-outline">
+          <svg>
+            <path class="mdc-notched-outline__path"/>
+          </svg>
+        </div>
+        <div class="mdc-notched-outline__idle"></div>
+      </div>
+    </div>
+
+    <div class="mdc-drawer__content-padded">
+      <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
+        <input type="text" id="<!--{instance}-->-location" name="location" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{request.params.query.q}}">
+        <label class="mdc-floating-label mdc-floating-label--float-above" for="<!--{instance}-->-location">Location</label>
+        <div class="mdc-notched-outline">
+          <svg>
+            <path class="mdc-notched-outline__path"/>
+          </svg>
+        </div>
+        <div class="mdc-notched-outline__idle"></div>
+      </div>
+    </div>
+
+    <input type="hidden" name="lat" value="{{request.params.query.lat}}">
+    <input type="hidden" name="lng" value="{{request.params.query.lng}}">
+
+    <h3 class="mdc-drawer__content-heading mdc-theme--primary-bg mdc-theme--on-primary">Roles</h3>
+    {{#each data.supplimentaryResponses.types.aggregations.roles.buckets ~}}
+      {{> term_checkbox key=key field="roles" selected=../request.params.query.roles}}
+    {{/each ~}}
+    
+    <h3 class="mdc-drawer__content-heading mdc-theme--primary-bg mdc-theme--on-primary">Sectors</h3>
+    {{#each data.supplimentaryResponses.types.aggregations.sectors.buckets ~}}
+      {{> term_checkbox key=key field="sectors" selected=../request.params.query.roles}}
+    {{/each ~}}
+    
+    <h3 class="mdc-drawer__content-heading mdc-theme--primary-bg mdc-theme--on-primary">Statuses</h3>
+    {{#each data.supplimentaryResponses.types.aggregations.statuses.buckets ~}}
+      {{> term_checkbox key=key field="statuses" selected=../request.params.query.roles}}
+    {{/each ~}}
+    
+    <button class="mdc-button mdc-button--raised" type="submit">
+      Search jobs
+    </button>
+  </form>
+</div>
