Minor padding/margin adjustments to search form

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -236,6 +236,10 @@ a {
   transition: all .3s ease-out;
 }
 
+.mdc-button--fullwidth {
+  width: 100%;
+}
+
 .search-info {
   margin-bottom: $unit;
   background: #fafafa;
@@ -856,6 +860,25 @@ footer {
 .text-centre { text-align: center; }
 .text-justify { text-align: justify; }
 .pull-right { float: right; }
+
+.v-padding {
+  padding-top: $unit/2;
+  padding-bottom: $unit/2;
+}
+.v-padding-full {
+  padding-top: $unit;
+  padding-bottom: $unit;
+}
+
+.h-padding {
+  padding-left: $unit/2;
+  padding-bottom: $unit/2;
+}
+
+.t-padding { padding-top: $unit/2; }
+.b-padding { padding-bottom: $unit/2; }
+.l-padding { padding-left: $unit/2; }
+.r-padding { padding-right: $unit/2; }
 
 .v-margin {
   margin-top: $unit/2;
