--- a/db/configurations/goodmoves/layouts/default.hbs
+++ b/db/configurations/goodmoves/layouts/default.hbs
@@ -246,28 +246,36 @@ if(location.host.indexOf('.local') > -1){
         </nav>
       </aside>
 
-      {{#if route.metaData.sidebarIcon}}
-      <aside class="mdc-drawer mdc-drawer--temporary mdc-typography" id="sidebar-temporary" data-mdc-auto-init="MDCTemporaryDrawer">
-        <div class="mdc-drawer__drawer">
-          <!--{section:sidebar[temp]}-->
-        </div>
-      </aside>
-      {{/if}}
-
-      <main class="mdc-theme--background mdc-toolbar-fixed-adjust {{#if route.metaData.sidebarIcon ~}}drawer-container{{/if}}">
-        <div class="container-fluid">
+      <div class="container-content">
+        <div class="container-content-{{#if request.params.path}}{{replace request.params.path '_' '-'}} container-fluid{{else}}home{{/if}}">
           {{#if route.metaData.sidebarIcon}}
-          <aside class="mdc-drawer mdc-drawer--permanent hide-sm" id="sidebar-permanent" data-mdc-aut-init="MDCPermanentDrawer">
+          <aside class="mdc-drawer mdc-drawer--temporary mdc-typography" id="sidebar-temporary" data-mdc-auto-init="MDCTemporaryDrawer">
             <div class="mdc-drawer__drawer">
-              <!--{section:sidebar[perm]}-->
+              <!--{section:sidebar[temp]}-->
             </div>
           </aside>
           {{/if}}
-          <div class="container-content">
-            <!--{section:body}-->
-          </div>
+
+          <main class="mdc-theme--background mdc-toolbar-fixed-adjust {{#if route.metaData.sidebarIcon ~}}drawer-container{{/if}}">
+            <div class="mdc-layout-grid">
+              <div class="mdc-layout-grid__inner">
+                {{#if route.metaData.sidebarIcon}}
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone">
+                  <aside class="mdc-drawer mdc-drawer--permanent hide-sm" id="sidebar-permanent" data-mdc-aut-init="MDCPermanentDrawer">
+                    <div class="mdc-drawer__drawer">
+                    <!--{section:sidebar[perm]}-->
+                    </div>
+                  </aside>
+                </div>
+                {{/if}}
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-{{#if route.metaData.sidebarIcon}}9{{else}}12{{/if}}-desktop mdc-layout-grid__cell--span-{{#if route.metaData.sidebarIcon}}5{{else}}8{{/if}}-tablet mdc-layout-grid__cell--span-4-phone">
+                  <!--{section:body}-->
+                </div>
+              </div>
+            </div>
+          </main>
         </div>
-      </main>
+      </div>
 
       <footer>
         <div class="footer-main">
