--- a/db/configurations/goodmoves/templates/pages/home.hbs
+++ b/db/configurations/goodmoves/templates/pages/home.hbs
@@ -1,61 +1,66 @@
 <div class="container-fluid">
-  <div class="search-overlay">
-    <section id="search-overlay" class="search-overlay-panel">
-      <div id="search-tab-bar" class="mdc-tab-bar" data-mdc-auto-init="MDCTabBar">
-        <a class="mdc-tab" href="/">
-          <span class="far fa-map-marker-alt fa-fw" title="Location"></span>
-          Map
-        </a>
-        <a class="mdc-tab" href="#" id="detailed-results">
-          <span class="far fa-list fa-fw" title="Location"></span>
-          List
-        </a>
-        <span class="mdc-tab-bar__indicator"></span>
-      </div>
-      <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
-        <input type="text" class="mdc-text-field__input mdc-text-field--fullwidth" id="what">
-        <label class="mdc-floating-label mdc-floating-label--float-above" for="what">What</label>
-        <div class="mdc-notched-outline">
-          <svg>
-            <path class="mdc-notched-outline__path"/>
-          </svg>
+  <div class="mdc-layout-grid">
+    <div class="mdc-layout-grid__inner">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone">
+        <div class="search-overlay">
+          <h2 class="mdc-drawer__content-heading mdc-theme--primary-bg mdc-theme--on-primary hide-sm">Search jobs</h2>
+          <div id="search-tab-bar" class="mdc-tab-bar" data-mdc-auto-init="MDCTabBar">
+            <a class="mdc-tab" href="/">
+              <span class="far fa-map-marker-alt fa-fw" title="Location"></span>
+              Map
+            </a>
+            <a class="mdc-tab" href="#" id="detailed-results">
+              <span class="far fa-list fa-fw" title="Location"></span>
+              List
+            </a>
+            <span class="mdc-tab-bar__indicator"></span>
+          </div>
+          <section id="search-overlay" class="search-overlay-panel">
+            <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
+              <input type="text" class="mdc-text-field__input mdc-text-field--fullwidth" id="what">
+              <label class="mdc-floating-label mdc-floating-label--float-above" for="what">What</label>
+              <div class="mdc-notched-outline">
+                <svg>
+                  <path class="mdc-notched-outline__path"/>
+                </svg>
+              </div>
+              <div class="mdc-notched-outline__idle"></div>
+            </div>
+            <div id="search-terms" class="mdc-chip-set"></div>
+            <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
+              <input type="text" class="mdc-text-field__input mdc-text-field--fullwidth" id="where" placeholder="">
+              <label class="mdc-floating-label mdc-floating-label--float-above" for="where">Where</label>
+              <div class="mdc-notched-outline">
+                <svg>
+                  <path class="mdc-notched-outline__path"/>
+                </svg>
+              </div>
+              <div class="mdc-notched-outline__idle"></div>
+            </div>
+            <div class="mdc-form-field">
+              <div class="mdc-select" data-mdc-auto-init="MDCSelect">
+                <select class="mdc-select__native-control fullwidth" id="distance">
+                  <option value="any">Any distance</option>
+                  <option value="1609.344">1 mile</option>
+                  <option value="3218.688">2 miles</option>
+                  <option value="8046.72" selected>5 miles</option>
+                  <option value="16093.44">10 miles</option>
+                  <option value="24140.16">15 miles</option>
+                  <option value="40233.6">25 miles</option>
+                  <option value="80467.2">50 miles</option>
+                </select>
+                <label class="mdc-floating-label mdc-floating-label--float-above" for="distance">Distance</label>
+              </div>
+            </div>
+          </section>
         </div>
-        <div class="mdc-notched-outline__idle"></div>
       </div>
-      <div id="search-terms" class="mdc-chip-set"></div>
-      <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
-        <input type="text" class="mdc-text-field__input mdc-text-field--fullwidth" id="where" placeholder="">
-        <label class="mdc-floating-label mdc-floating-label--float-above" for="where">Where</label>
-        <div class="mdc-notched-outline">
-          <svg>
-            <path class="mdc-notched-outline__path"/>
-          </svg>
-        </div>
-        <div class="mdc-notched-outline__idle"></div>
-      </div>
-      <div class="mdc-form-field">
-        <div class="mdc-select" data-mdc-auto-init="MDCSelect">
-          <select class="mdc-select__native-control fullwidth" id="distance">
-            <option value="any">Any distance</option>
-            <option value="1609.344">1 mile</option>
-            <option value="3218.688">2 miles</option>
-            <option value="8046.72" selected>5 miles</option>
-            <option value="16093.44">10 miles</option>
-            <option value="24140.16">15 miles</option>
-            <option value="40233.6">25 miles</option>
-            <option value="80467.2">50 miles</option>
-          </select>
-          <label class="mdc-floating-label mdc-floating-label--float-above" for="distance">Distance</label>
-        </div>
-      </div>
-      <!-- <button type="button" id="detailed-results" class="mdc-button mdc-button--raised">Detailed results</button> -->
-    </section>
-  </div>
-  <div id="search-results">
-    test
+    </div>
   </div>
 </div>
-<section>
+
+<section class="map">
   <div id="map-full"></div>
 </section>
+
 {{> currently_recruiting}}
